--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>Rsschool-cv</title>
     <link rel="shortcut icon" href="./img/icon-cv.png" type="image/x-icon" />
     <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:400,700&display=swap"
+      href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="sass/style.css" />
