feat: add footer

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="sass/style.css" />
   </head>
   <body>
-    <main class="main">
+    <main class="main wrapper">
       <section class="contact-info">
         <div class="cover">
           <img class="cover__photo" src="img/photo.jpg" alt="My photo" />
@@ -39,13 +39,11 @@
                 <span class="icon-round">
                   <span class="icon icon_letter"></span>
                 </span>
-                <a href="mailto:Vashkevichup@gmail.com"
-                  >Vashkevichup@gmail.com</a
-                >
+                <a href="mailto:Vashkevichup@gmail.com">Vashkevichup@gmail.com</a>
               </li>
               <li class="contact-me__link">
                 <span class="icon-round">
-                  <span class="icon icon_git"></span>
+                  <span class="icon icon_git icon2"></span>
                 </span>
                 <a href="https://github.com/Yuri-9/">Yuri-9</a>
               </li>
@@ -68,10 +66,9 @@
             <h3>The main goal</h3>
           </div>
           <p class="extension__text">
-            The main goal is to make my family always happy. Earn a lot of money
-            and travel with my family around the world. I like to work at a
-            computer, program and analyze code. I do not want to sit still, I
-            want to evolve and become a developer.
+            The main goal is to make my family always happy. Earn a lot of money and travel with my
+            family around the world. I like to work at a computer, program and analyze code. I do
+            not want to sit still, I want to evolve and become a developer.
           </p>
         </div>
         <div class="extension__item">
@@ -98,9 +95,7 @@
           </div>
           <ul class="extension__list">
             <li class="extension__link">
-              <a href="https://yuri-9.github.io/piskel-clone/"
-                >Piskel-clone (canvas)</a
-              >
+              <a href="https://yuri-9.github.io/piskel-clone/">Piskel-clone (canvas)</a>
             </li>
             <li class="extension__link">
               <a href="https://yuri-9.github.io/fancy-weather/"
@@ -138,15 +133,11 @@
             </li>
             <li class="extension__link">
               RSSchool course «JavaScript/Front-end» 2019-2020
-              <a href="https://app.rs.school/certificate/7kgaun5v"
-                >Certificate of Completion</a
-              >
+              <a href="https://app.rs.school/certificate/7kgaun5v">Certificate of Completion</a>
             </li>
             <li class="extension__link">
               RSSchool course «React» 2020
-              <a href="https://app.rs.school/certificate/sovht1n6"
-                >Certificate of Completion</a
-              >
+              <a href="https://app.rs.school/certificate/sovht1n6">Certificate of Completion</a>
             </li>
           </ul>
         </div>
@@ -177,5 +168,11 @@
         </div>
       </section>
     </main>
+    <footer class="footer wrapper">
+      <a href="https://rs.school/js/" class="logo">
+        <span class="logo-img"></span>
+      </a>
+      <p>Date of creation <time>2021-02-25</time></p>
+    </footer>
   </body>
 </html>
