feat: add footer

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="sass/style.css" />
   </head>
   <body>
-    <main class="main">
+    <main class="main wrapper">
       <section class="contact-info">
         <div class="cover">
           <img class="cover__photo" src="img/photo.jpg" alt="My photo" />
@@ -177,5 +177,11 @@
         </div>
       </section>
     </main>
+    <footer class="footer wrapper">
+      <a href="https://rs.school/js/" class="logo">
+        <span class="logo-img"></span>
+      </a>
+      <p>Date of creation <time>2021-02-25</time></p>
+    </footer>
   </body>
 </html>
