--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <span class="icon-round">
                   <span class="icon icon_letter"></span>
                 </span>
-                <a href="mailto:Vashkevichup@gmail.com">Vashkevichup@gmail.com</a>
+                <a href="mailto:Vashkevichyp@gmail.com">Vashkevichyp@gmail.com</a>
               </li>
               <li class="contact-me__link">
                 <span class="icon-round">
